# Pokemon

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/: launch.json
.github/workflows/: ci.yml
apps/vision/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/vision/app/: __init__.py  config.py  imaging.py  main.py  schemas.py  security.py
apps/vision/app/grading/: __init__.py  disclaimer.py  rules.py
apps/vision/app/pipeline/: __init__.py  centering.py  corners.py  detect.py  edges.py  orientation.py  quality.py  rectify.py  structural.py  surface.py
apps/vision/app/routers/: cards.py  common.py  images.py
apps/vision/tests/: conftest.py  test_centering.py  test_detect_rectify.py  test_grade_potential.py  test_health.py  test_quality.py  test_rules.py
apps/web/: next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  trigger.config.ts  tsconfig.json  vitest.config.ts
apps/web/e2e/: smoke.spec.ts
apps/web/public/: manifest.webmanifest  sw.js
apps/web/src/: middleware.ts
apps/web/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx
apps/web/src/components/: brand.tsx  catalog-search.tsx  command-search.tsx  data-mode-banner.tsx  disclaimer.tsx  empty-state.tsx  pwa-register.tsx  stat.tsx  theme-provider.tsx  theme-toggle.tsx
apps/web/src/lib/: api.ts  (+11 more)
docs/: ARCHITECTURE.md  DATA_PROVIDERS.md  DEPLOYMENT.md  GRADING_METHODOLOGY.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  SECURITY.md  STRIPE_BILLING.md
supabase/: config.toml
supabase/templates/: confirm-signup.html
(+120 files in other folders)
