[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psr-vision"
version = "0.1.0"
description = "Pokemon Stock Radar computer-vision microservice for card grade-potential estimation."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "Pokemon Stock Radar" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2",
    "pydantic-settings>=2",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "pillow>=10",
    "scikit-image>=0.22",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# Developer / test tooling. Everything here is enough to run and test the
# service end to end: `pip install -e ".[dev]"` then `pytest`.
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.4",
]
# OPTIONAL machine-learning acceleration. These are intentionally NOT imported
# at module load time. The service runs and all tests pass WITHOUT these.
# Only future, explicitly-guarded code paths may use them.
ml = [
    "torch>=2.2",
    "onnxruntime>=1.17",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI uses function calls (Depends/File) in defaults by design.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
